--- a/inchoo-task-2/index.html
+++ b/inchoo-task-2/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 <header class="bg-header font-bold text-white text-xxs lg:text-xs ">
-    <div class="flex flex-row justify-between mx-2 items-center h-8 lg:justify-between lg:mx-52 lg:h-12 ">
+    <div class="flex flex-row justify-between mx-2 items-center h-8 lg:justify-between lg:mx-10 xl:mx-56 lg:h-12 ">
         <div class="flex">
-            <p class="hidden md:block font-light md:mr-2">Contact our Customer Service</p>
+            <p class="hidden md:block md:mr-2 font-light">Contact our Customer Service</p>
             <img src="src/img/telefon.svg" alt="">
             <p class="hidden md:inline ml-2">(800) 333-3567</p>
             <ul class="flex flex-row list-disc underline">
@@ -34,20 +34,20 @@
         <div class="flex justify-center bg-gray-200 w-8 h-8 rounded-full md:hidden"><img src="src/img/hamburger-icon.svg" alt="" class="w-4"></div>
         <img src="src/img/inchoo-logo-nav.svg" alt="" class="w-32">
         <div class="flex flex-row">
-            <ul class="hidden md:flex md:font-bold">
+            <ul class="hidden md:flex sm:font-bold">
                 <a href="#">
                     <li class="flex px-5 hover:text-orange-600 hover:stroke-orange-600">
                         <svg width="22" height="42" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
-                        <span>SOFT TOP <br> PRODUCTS</span></li>
+                        <span>Soft top <br> products</span></li>
                 </a>
                 <a href="#">
-                    <li class="flex px-5 hover:text-orange-600">
+                    <li class="flex px-2 hover:text-orange-60np">
                         <svg width="22" height="42" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
-                        <span>JEEP <br> ACCESSORIES</span></li>
+                        <span>Jeep <br> Accessories</span></li>
                 </a>
             </ul>
         </div>
@@ -73,7 +73,7 @@
     </div>
 
     <!-- desktop > navbar -->
-    <div class="hidden flex-row justify-between items-center text-lg leading-6 mt-6 h-8 lg:flex lg:justify-between lg:mx-52 lg:h-12 ">
+    <div class="hidden flex-row justify-between items-center text-lg  mt-6 h-8 lg:flex lg:justify-between lg:mx-10 xl:mx-56  lg:h-12">
         <img src="src/img/inchoo-logo-nav.svg" alt="" class="w-32">
         <div>
             <ul class="flex font-bold">
@@ -82,23 +82,25 @@
                         <svg width="23" height="52" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
-                        <span>SOFT TOP <br> PRODUCTS</span></li>
+                        <span>Soft top <br> products</span></li>
                 </a>
                 <a href="#">
                     <li class="flex px-5 hover:text-orange-600">
                         <svg width="23" height="52" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
-                        <span>JEEP <br> ACCESSORIES</span></li>
+                        <span>Jeep <br> Accessories</span></li>
                 </a>
             </ul>
         </div>
         <div class="flex">
             <div class="flex justify-between border-black border px-3 py-3 mr-4">
-                <input type="text" placeholder="Search entire store here..." class="mr-6 w-40 text-sm focus:outline-0"/>
-                <img src="src/img/search-icon.svg"/>
+                <label>
+                    <input type="text" placeholder="Search entire store here..." class="mr-6 w-40 text-sm focus:outline-0"/>
+                </label>
+                <img src="src/img/search-icon.svg" alt=""/>
             </div>
-            <div class="bg-green-700 border border-green-700 py-3 px-5 relative">
+            <div class="bg-green-700 border border-green-700 py-3 px-5 relative uppercase">
                 <div class="bg-gray-200 bottom-10 left-36 absolute text-center rounded-full w-5 h-5 text-sm"><span class="text-green-700">2</span></div>
                 <a href="#" class="flex content-center items-center">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -108,43 +110,43 @@
                         <circle cx="5.62964" cy="14.5185" r="1.18519" fill="white"/>
                         <circle cx="12.7407" cy="14.5185" r="1.18519" fill="white"/>
                     </svg>
-                    <span class="text-white px-3">MY CART</span>
+                    <span class="text-white px-3">My cart</span>
                     <img src="src/img/triangle-down.svg" alt="">
                 </a>
             </div>
         </div>
     </div>
 </nav>
-<section><p class="text-xl md:text-6xl mx-4 mt-5 sm:mx-52 sm:mt-8">SHOPPING CART</p></section>
-<main class="mt-8 mx-3 lg:mx-52 sm:flex">
-    <div class="flex flex-col-reverse sm:flex-col lg:flex-row">
+<section><p class="text-xl sm:text-4xl mx-4 mt-5 lg:mx-10 xl:mx-56 sm:mt-8 uppercase">Shopping cart</p></section>
+<main class="mt-8 mx-3 lg:mx-10 xl:mx-56">
+    <div class="flex flex-col-reverse md:flex-col lg:flex-row">
         <div class="md:flex md:flex-col md:justify-start font-bold">
 
             <article class="flex justify-between mt-5">
-                <div class="grid grid-cols-2 gap-4 py-8 text-xs sm:grid-cols-5">
-                    <div class="hidden sm:flex sm:col-span-2"><p>Item</p></div>
-                    <div class="hidden sm:flex justify-center"><p>Qty</p></div>
-                    <div class="hidden sm:flex justify-center"><p>Subtotal</p></div>
+                <div class="grid grid-cols-2 gap-4 py-8 text-xs md:grid-cols-6">
+                    <div class="hidden md:flex col-span-2 md:col-span-3"><p>Item</p></div>
+                    <div class="hidden md:flex justify-center"><p>Qty</p></div>
+                    <div class="hidden md:flex justify-center"><p>Subtotal</p></div>
                     <div></div>
 
 
-                    <div class="flex col-span-2 gap-2"><img src="src/img/auto-product.png" alt="" class="h-20">
+                    <div class="flex col-span-2 md:col-span-3 gap-2"><img src="src/img/auto-product.png" alt="" class="h-16 md:h-28">
                         <div class="flex flex-col gap-3">
                             <p>Flip Top™ Complete Replacement Soft Top, Jeep 1976-1995 CJ-7/Wrangler, No doors included, Clear side and rear windows</p>
                             <p>Color: <span class="font-normal">Black Denim</span></p></div>
                     </div>
 
-                    <div class="flex flex-col justify-start gap-4 sm:items-center">
-                        <div class="w-10 flex justify-center sm:hidden"><p>Qty</p></div>
+                    <div class="flex flex-col justify-start gap-4 md:items-center">
+                        <div class="w-10 flex justify-center md:hidden"><p>Qty</p></div>
                         <div class="flex justify-center items-center w-12 h-12 border-2 border-black"><span class="font-normal">1</span></div>
                     </div>
-                    <div class="flex flex-col items-end gap-4 sm:items-center"><p class="uppercase sm:hidden">Subtotal</p>
+                    <div class="flex flex-col items-end gap-4 md:items-center"><p class="uppercase md:hidden">Subtotal</p>
                         <p class="mt-4">1550$</p>
-                        <div class="flex flex-row gap-4 sm:hidden"><img src="src/img/edit-product-icon.svg" alt=""><img src="src/img/remove-product-icon.svg"
+                        <div class="flex flex-row gap-4 md:hidden"><img src="src/img/edit-product-icon.svg" alt=""><img src="src/img/remove-product-icon.svg"
                                                                                                                         alt="">
                         </div>
                     </div>
-                    <div class="hidden gap-4 sm:flex sm:flex-row sm:justify-center sm:items-start sm:pt-4"><img src="src/img/edit-product-icon.svg" alt=""
+                    <div class="hidden gap-4 md:flex md:flex-row md:justify-center md:items-start md:pt-4"><img src="src/img/edit-product-icon.svg" alt=""
                                                                                                                 class="w-4"><img
                             src="src/img/remove-product-icon.svg"
                             alt="" class="w-4">
@@ -152,26 +154,27 @@
                 </div>
             </article>
         </div>
-        <div class="flex flex-col sm:w-1/2"><p class="font-bold text-3xl hidden md:block">SUMMARY</p>
-            <div class="flex justify-between items-center md:px-8 border-t-2 border-white bg-gray-300 w-full h-12"><span>ESTIMATE SHIPPING AND TAX</span><img
+        <div class="flex flex-col lg:w-1/2"><p class="font-bold text-3xl hidden md:block">SUMMARY</p>
+            <div class="flex justify-between items-center md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit py-4">
+                <span>ESTIMATE SHIPPING AND TAX</span><img
                     src="src/img/plus-icon.svg" alt=""></div>
-            <div class="flex flex-col justify-start md:px-8 border-t-2 border-white bg-gray-300 w-full h-12">
+            <div class="flex flex-col justify-start md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit py-4">
                 <div class="flex content-start gap-14">
                     <div><p>Subtotal</p></div>
                     <div><p>$150.00</p></div>
                 </div>
                 <div class="flex">
-                    <div><span>Shipping<span class="font-light">(Flat rate - Fixed)</span></span></div>
+                    <div><p>Shipping<span class="font-light">(Flat rate - Fixed)</span></p></div>
                     <div><p>$5.00</p></div>
                 </div>
             </div>
-            <div class="flex flex-col justify-start md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit">
+            <div class="flex flex-col justify-start md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit py-4">
                 <div class="flex content-start gap-14">
                     <div class="text-2xl"><p>Order total</p></div>
                     <div><p>$150.00</p></div>
                 </div>
                 <div class="flex">
-                    <button>Proceed to checkout</button>
+                    <button class="p-3 border-2 border-green-700 bg-green-700 w-full text-white font-semibold">PROCEED TO CHECKOUT</button>
                 </div>
                 <div><p><a href="">checkout with multiple adresses</a></p></div>
             </div>
