--- a/inchoo-task-2/index.html
+++ b/inchoo-task-2/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="bg-header font-bold text-white text-xxs lg:text-xs ">
-    <div class="flex flex-row justify-between mx-2 items-center h-8 lg:justify-between lg:mx-10 xl:mx-56 lg:h-12 ">
+    <div class="flex flex-row justify-between mx-2 items-center h-8 lg:justify-between lg:mx-10 xl:mx-36 2xl:mx-56 lg:h-12">
         <div class="flex">
             <p class="hidden md:block md:mr-2 font-light">Contact our Customer Service</p>
             <img src="src/img/telefon.svg" alt="">
@@ -25,9 +25,10 @@
         </div>
         <div class="hidden lg:inline font-thin"><span>Promo message area - shipping advantages, special offers…</span></div>
         <div class="flex gap-1"><img src="src/img/user-icon.svg" alt="">
-            <p><a href="">SIGN IN</a></p></div>
+            <p class="uppercase"><a href="">Sign in</a></p></div>
     </div>
 </header>
+<!--Nav tag, odvojen je na 2 djela... u trenutku je tako privremeno napravljeno zbog 'preglednosti' treba prepraviti-->
 <nav>
     <!-- sm md navbar -->
     <div class="flex flex-row justify-between mx-3 items-center text-xs mt-6 h-8 lg:hidden">
@@ -40,14 +41,14 @@
                         <svg width="22" height="42" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
-                        <span>Soft top <br> products</span></li>
+                        <span class="uppercase">Soft top <br> products</span></li>
                 </a>
                 <a href="#">
                     <li class="flex px-2 hover:text-orange-60np">
                         <svg width="22" height="42" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
-                        <span>Jeep <br> Accessories</span></li>
+                        <span class="uppercase">Jeep <br> Accessories</span></li>
                 </a>
             </ul>
         </div>
@@ -73,7 +74,7 @@
     </div>
 
     <!-- desktop > navbar -->
-    <div class="hidden flex-row justify-between items-center text-lg  mt-6 h-8 lg:flex lg:justify-between lg:mx-10 xl:mx-56  lg:h-12">
+    <div class="hidden flex-row justify-between items-center text-sm mt-6 h-8 lg:flex lg:justify-between lg:mx-10 xl:mx-36 2xl:mx-56 lg:h-12">
         <img src="src/img/inchoo-logo-nav.svg" alt="" class="w-32">
         <div>
             <ul class="flex font-bold">
@@ -82,14 +83,14 @@
                         <svg width="23" height="52" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
-                        <span>Soft top <br> products</span></li>
+                        <span class="uppercase">Soft top <br> products</span></li>
                 </a>
                 <a href="#">
                     <li class="flex px-5 hover:text-orange-600">
                         <svg width="23" height="52" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
-                        <span>Jeep <br> Accessories</span></li>
+                        <span class="uppercase">Jeep <br> Accessories</span></li>
                 </a>
             </ul>
         </div>
@@ -100,8 +101,8 @@
                 </label>
                 <img src="src/img/search-icon.svg" alt=""/>
             </div>
-            <div class="bg-green-700 border border-green-700 py-3 px-5 relative uppercase">
-                <div class="bg-gray-200 bottom-10 left-36 absolute text-center rounded-full w-5 h-5 text-sm"><span class="text-green-700">2</span></div>
+            <div class="bg-green-700 border border-green-700 py-3 px-5 relative">
+                <div class="bg-gray-200 bottom-8 left-32 absolute text-center rounded-full w-5 h-5 text-sm"><span class="text-green-700">2</span></div>
                 <a href="#" class="flex content-center items-center">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -110,15 +111,15 @@
                         <circle cx="5.62964" cy="14.5185" r="1.18519" fill="white"/>
                         <circle cx="12.7407" cy="14.5185" r="1.18519" fill="white"/>
                     </svg>
-                    <span class="text-white px-3">My cart</span>
+                    <span class="text-white px-3 uppercase">My cart</span>
                     <img src="src/img/triangle-down.svg" alt="">
                 </a>
             </div>
         </div>
     </div>
 </nav>
-<section><p class="text-xl sm:text-4xl mx-4 mt-5 lg:mx-10 xl:mx-56 sm:mt-8 uppercase">Shopping cart</p></section>
-<main class="mt-8 mx-3 lg:mx-10 xl:mx-56">
+<section><p class="text-xl sm:text-4xl mx-4 mt-5 lg:mx-10 xl:mx-36 2xl:mx-56 sm:mt-8">Shopping cart</p></section>
+<main class="mt-8 mx-3 lg:mx-10 xl:mx-36 2xl:mx-56">
     <div class="flex flex-col-reverse md:flex-col lg:flex-row">
         <div class="md:flex md:flex-col md:justify-start font-bold">
 
@@ -128,7 +129,6 @@
                     <div class="hidden md:flex justify-center"><p>Qty</p></div>
                     <div class="hidden md:flex justify-center"><p>Subtotal</p></div>
                     <div></div>
-
 
                     <div class="flex col-span-2 md:col-span-3 gap-2"><img src="src/img/auto-product.png" alt="" class="h-16 md:h-28">
                         <div class="flex flex-col gap-3">
@@ -146,37 +146,38 @@
                                                                                                                         alt="">
                         </div>
                     </div>
-                    <div class="hidden gap-4 md:flex md:flex-row md:justify-center md:items-start md:pt-4"><img src="src/img/edit-product-icon.svg" alt=""
-                                                                                                                class="w-4"><img
-                            src="src/img/remove-product-icon.svg"
-                            alt="" class="w-4">
+                    <div class="hidden gap-4 md:flex md:flex-row md:justify-center md:items-start md:pt-4">
+                        <a href="#"><img src="src/img/edit-product-icon.svg" alt="" class="w-4"></a>
+                        <a href="#"> <img src="src/img/remove-product-icon.svg" alt="" class="w-4"></a>
                     </div>
                 </div>
             </article>
         </div>
         <div class="flex flex-col lg:w-1/2"><p class="font-bold text-3xl hidden md:block">SUMMARY</p>
-            <div class="flex justify-between items-center md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit py-4">
-                <span>ESTIMATE SHIPPING AND TAX</span><img
-                    src="src/img/plus-icon.svg" alt=""></div>
-            <div class="flex flex-col justify-start md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit py-4">
-                <div class="flex content-start gap-14">
+            <div class="flex justify-between items-center md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit py-4 lg:text-xs lg:font-semibold">
+                <span class="ml-8 lg:m-0">ESTIMATE SHIPPING AND TAX</span>
+                <img src="src/img/plus-icon.svg" alt="" class="mr-8 lg:m-0"></div>
+            <div class="flex flex-col md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit py-4 lg:text-xs lg:font-semibold">
+                <div class="flex justify-between mx-8 lg:mx-0">
                     <div><p>Subtotal</p></div>
                     <div><p>$150.00</p></div>
                 </div>
-                <div class="flex">
-                    <div><p>Shipping<span class="font-light">(Flat rate - Fixed)</span></p></div>
+                <div class="flex justify-between mx-8 lg:mx-0">
+                    <div><p>Shipping <span class="font-light text-xxs">(Flat rate - Fixed)</span></p></div>
                     <div><p>$5.00</p></div>
                 </div>
             </div>
-            <div class="flex flex-col justify-start md:px-8 border-t-2 border-white bg-gray-300 w-full h-fit py-4">
-                <div class="flex content-start gap-14">
-                    <div class="text-2xl"><p>Order total</p></div>
+            <div class="flex flex-col justify-start md:px-8 lg:px-0 py-4 border-t-2 border-white bg-gray-300 w-full h-fit ">
+                <div class="flex justify-between mx-8 lg:mx-8">
+                    <div><p>Order total</p></div>
                     <div><p>$150.00</p></div>
                 </div>
-                <div class="flex">
-                    <button class="p-3 border-2 border-green-700 bg-green-700 w-full text-white font-semibold">PROCEED TO CHECKOUT</button>
+                <div class="flex mt-5">
+                    <button class="p-3 lg:p-0 border-2 border-green-700 bg-green-700 w-full lg:h-10 text-white font-semibold lg:text-sm uppercase">Proceed to
+                        checkout
+                    </button>
                 </div>
-                <div><p><a href="">checkout with multiple adresses</a></p></div>
+                <div class="flex justify-center underline mt-5 uppercase lg:text-xs"><p><a href="">checkout with multiple adresses</a></p></div>
             </div>
         </div>
     </div>
