--- a/inchoo-task-2/index.html
+++ b/inchoo-task-2/index.html
@@ -31,21 +31,21 @@
 <!--Nav tag, odvojen je na 2 djela... u trenutku je tako privremeno napravljeno zbog 'preglednosti' treba prepraviti-->
 <nav>
     <!-- sm md navbar -->
-    <div class="flex flex-row justify-between mx-3 items-center text-xs mt-6 h-8 lg:hidden">
+    <div class="lg:hidden flex flex-row justify-between mx-3 items-center text-sm mt-6 h-8 ">
         <div class="flex justify-center bg-gray-200 w-8 h-8 rounded-full md:hidden"><img src="src/img/hamburger-icon.svg" alt="" class="w-4"></div>
         <img src="src/img/inchoo-logo-nav.svg" alt="" class="w-32">
         <div class="flex flex-row">
             <ul class="hidden md:flex sm:font-bold">
                 <a href="#">
-                    <li class="flex px-5 hover:text-orange-600 hover:stroke-orange-600">
-                        <svg width="22" height="42" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <li class="flex px-5 hover:text-orange-600">
+                        <svg width="24" height="38" viewBox="0 0 24 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
                         <span class="uppercase">Soft top <br> products</span></li>
                 </a>
                 <a href="#">
-                    <li class="flex px-2 hover:text-orange-60np">
-                        <svg width="22" height="42" viewBox="0 0 23 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <li class="flex px-5 hover:text-orange-600">
+                        <svg width="24" height="38" viewBox="0 0 24 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.3006 50.0343L20.7153 1.96576" stroke="currentColor" stroke-width="2" stroke-linecap="square"/>
                         </svg>
                         <span class="uppercase">Jeep <br> Accessories</span></li>
@@ -74,8 +74,8 @@
     </div>
 
     <!-- desktop > navbar -->
-    <div class="hidden flex-row justify-between items-center text-sm mt-6 h-8 lg:flex lg:justify-between lg:mx-10 xl:mx-36 2xl:mx-56 lg:h-12">
-        <img src="src/img/inchoo-logo-nav.svg" alt="" class="w-32">
+    <div class="hidden lg:flex lg:justify-between items-center mt-6 lg:mx-10 xl:mx-36 2xl:mx-56 md:h-fit lg:h-fit">
+        <img src="src/img/inchoo-logo-nav.svg" alt="" class="w-32 lg:w-fit">
         <div>
             <ul class="flex font-bold">
                 <a href="#">
